[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../../util" }
uuid = {version = "1.3", features = ["v4"] }
async-trait = "0.1.64"
mockall = "0.11.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
actix-web = "4"

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }
