[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
uuid={version = "1.3.0", features = ["v4"]}
futures = '0.3.27'
serde_json = "1.0"
actix="0.13.0"
actix-web = "4"
env_logger = "0.10.0"
log = "0.4.14"
poker-board = {path = "../lib" }
util = {path = "../../util" }
actix-web-actors = "4.2.0"
rand= "0.8.5"
async-trait = "0.1.67"


